[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-github_rl"
version = "0.1.0"
description = "Sandboxed GitHub simulation environment for RL training"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "github_rl.server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["github_rl*", "server*", "server.mcp_tools*", "server.grader*"]

[tool.setuptools.package-data]
"server.grader" = ["tasks/**/*.json"]
